--- a/.gitignore
+++ b/.gitignore
@@ -83,9 +83,9 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+#   For a library or package, lyou might want to ignore these files since the code is
+#   intended to run in multiplle environments; otherwise, check them in:
+# .python-versionl
 
 # pipenv
 #   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
